creation d'une entité

--- a/.env
+++ b/.env
@@ -18,7 +18,8 @@
 APP_ENV=dev
 APP_SECRET=7b55838d16c9ebe29c5304edcc101c49
 ###< symfony/framework-bundle ###
-DATABASE_URL="mysql://root:@db_gitlab:3306/db_dev?serverVersion=mariadb-10.4.13"
+DATABASE_URL="mysql://root:@db_gitlab:3306/db_dev?serverVersion=5.7"
+
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
